remove unused timeseries and labels from cc prometheus  (#615)
- Remove unused time series and labels from cc prometheus
- Added network-cost-estimation dashboard to tac-modules
- moved prometheus-remote-write dashboard to iac-modules
- Fix netbird-management dashboard to use __rate_interval
- Do not drop id label in kubelet job to avoid errors in mimir
- Set loki replication factor to 1 by default
- Added network quick view dashboard

--- a/gitops/applications/base/monitoring-post-config/dashboards-prometheus.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-prometheus.yaml
@@ -34,13 +34,10 @@ metadata:
   name: mojaloop-prometheus-remote-write
 spec:
   folder: monitoring
-  datasources:
-    - inputName: "DS_PROMETHEUS"
-      datasourceName: "${ARGOCD_ENV_dashboard_datasource_name}" 
   instanceSelector:
     matchLabels:
       dashboards: "grafana"
-  url: "https://raw.githubusercontent.com/mojaloop/helm/${ARGOCD_ENV_mojaloop_dashboards_tag}/monitoring/dashboards/infrastructure/prometheus-remote-write.json"
+  url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/prometheus/prometheus-remote-write.json"
 ---
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
