--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -24,6 +24,8 @@ prometheus:
       url: http://central-monitoring-grafana-mimir-gateway/api/v1/push
       headers:
         X-Scope-OrgID: ${ARGOCD_ENV_remote_write_tenant_id}
+      metadataConfig:
+        sendInterval: ${ARGOCD_ENV_prometheus_scrape_interval}
   remoteRead:
     - name: central-monitoring
       url: http://central-monitoring-grafana-mimir-gateway/prometheus/api/v1/read
@@ -33,7 +35,6 @@ prometheus:
 
 kubelet:
   serviceMonitor:
-    # interval: 60s
     relabelings:
       # adds kubernetes_io_hostname label being used by k8s monitoring dashboard
       - sourceLabels: [node]
@@ -42,11 +43,66 @@ kubelet:
         targetLabel: kubernetes_io_hostname
         replacement: "${1}"
         action: replace
+    metricRelabelings:
+    - sourceLabels: ['__name__']
+      regex: 'apiserver_request_duration_seconds_bucket|apiserver_request_sli_duration_seconds_bucket'
+      action: drop
+    - sourceLabels: ['__name__']
+      regex: 'apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket'
+      action: drop
+    - sourceLabels: ['__name__']
+      regex: 'etcd_request_duration_seconds_bucket|apiserver_watch_events_sizes_bucket'
+      action: drop
+    - sourceLabels: ['__name__']
+      regex: 'apiserver_watch_cache_read_wait_seconds_bucket'
+      action: drop
+    - regex: endpoint|service
+      action: labeldrop
+    cAdvisorMetricRelabelings:
+    - sourceLabels: ['__name__']
+      regex: 'container_tasks_state|container_memory_failures_total|container_blkio_device_usage_total'
+      action: drop
+    - regex: endpoint|service
+      action: labeldrop
+    # remove name label with hexadecimal values only
+    - sourceLabels: [name]
+      regex: '^[a-f0-9]{64}$'
+      targetLabel: name
+      replacement: ''
+      action: replace
+    # NOTE: removing this label is expected to reduce remote write bandwidth by 15%
+    # removing id label causes err-mimir-sample-duplicate-timestamp error
+    # droping id entirely collapses multiple ts into one
+    # - sourceLabels: [id]
+    #   regex: '.+/pod.+'
+    #   targetLabel: id
+    #   replacement: ''
+    #   action: replace
+
+kubeApiServer:
+  enabled: false
+
+kube-state-metrics:
+  serviceMonitor:
+    relabelings:
+    # NOTE: there are valid endpoint and service labels. Therefore, labeldrop can not be used.
+    - sourceLabels: [endpoint]
+      regex: http
+      targetLabel: endpoint
+      replacement: ''
+      action: replace
+    - sourceLabels: [service]
+      regex: prom-kube-state-metrics
+      targetLabel: service
+      replacement: ''
+      action: replace
+    metricRelabelings:
+    - regex: uid
+      action: labeldrop
 
 
 node-exporter:
   serviceMonitor:
-    # interval: 60s
     relabelings:
       - sourceLabels: [__meta_kubernetes_pod_node_name]
         targetLabel: nodename
@@ -56,6 +112,8 @@ node-exporter:
         targetLabel: instance
         replacement: "${1}"
         action: replace
+      - regex: endpoint|service
+        action: labeldrop
   tolerations:
     - operator: "Exists"
 blackboxExporter:
