--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -118,3 +118,11 @@ metadata:
 spec:
   package: ghcr.io/mojaloop/iac-crossplane-packages/grafana-config:${ARGOCD_ENV_crossplane_packages_grafana_config_version}
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: k8s-config
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/k8s-config:${ARGOCD_ENV_crossplane_packages_k8s_config_version}
+  skipDependencyResolution: true
