--- a/gitops/applications/base/zitadel-post-config/kustomization.yaml
+++ b/gitops/applications/base/zitadel-post-config/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - zitadel-xplane-terraform-init.yaml
   - zitadel-xplane-terraform.yaml
-  - k8s-oidc-xplane-terraform.yaml
   - zitadel-xplane-providerconfig.yaml
   - argocd-oidc.yaml
   - vault-oidc.yaml
+  - k8s-oidc.yaml
