--- a/gitops/argo-apps/base/gitlab.yaml
+++ b/gitops/argo-apps/base/gitlab.yaml
@@ -129,6 +129,9 @@ spec:
         - name: "object_storage_host"
           value: "${ARGOCD_ENV_utils_storage_object_storage_host}"
 
+        - name: "object_storage_regional_host"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_regional_host}"
+
         - name: "object_storage_path_style"
           value: "${ARGOCD_ENV_utils_storage_object_storage_path_style}"
 
