feat: enable mysql_native_password

--- a/gitops/applications/overlays/rdbms_provider/dbaas/deploy-env-onboard/percona-xtradb-cluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/dbaas/deploy-env-onboard/percona-xtradb-cluster.yaml
@@ -42,6 +42,7 @@ spec:
         max_connections=2000
         innodb_buffer_pool_size=2147483648
         wsrep_auto_increment_control=OFF
+        mysql_native_password=ON
       tolerations: []
       priorityClassName: ""
 
