feat: add kiali to cc and env

--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - ../../../base/capi-post-config.yaml
   - ../../../base/base-monitoring.yaml
   - ../../../base/kyverno.yaml
+  - ../../../base/kiali.yaml
 
   # xplane database config
   - ../../../base/xplane-provider-config.yaml
