--- a/gitops/applications/base/kiali/kiali-virtual-service.yaml
+++ b/gitops/applications/base/kiali/kiali-virtual-service.yaml
@@ -14,6 +14,6 @@ spec:
             prefix: /
       route:
         - destination:
-            host: kiali-server
+            host: kiali
             port:
               number: 20001
