add back storage dashboards

--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - dashboards-mimir.yaml
   - dashboards-mojaloop.yaml
   - dashboards-prometheus.yaml
-  #- dashboards-storage.yaml
+  - dashboards-storage.yaml
   - istio-crs.yaml
   - mimir-alertmanager.yaml
   - mimirtool-cronjob.yaml
