--- a/gitops/applications/base/istio/istio-cni-values.yaml
+++ b/gitops/applications/base/istio/istio-cni-values.yaml
@@ -2,7 +2,7 @@ global:
   # Default hub for Istio images.
   hub: docker.io/istio
   # Default tag for Istio images.
-  tag: ${ARGOCD_ENV_istio_helm_version}
+  #tag: ${ARGOCD_ENV_istio_helm_version}
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
   imagePullPolicy: ""
