--- a/gitops/applications/base/kiali/kiali-values.yaml
+++ b/gitops/applications/base/kiali/kiali-values.yaml
@@ -53,11 +53,11 @@ deployment:
   image_name: quay.io/kiali/kiali
   image_pull_policy: "Always"
   image_pull_secrets: []
-  image_version: v2.11.0 # version like "v1.39" (see: https://quay.io/repository/kiali/kiali?tab=tags) or a digest hash
+  #image_version: v2.11.0 # version like "v1.39" (see: https://quay.io/repository/kiali/kiali?tab=tags) or a digest hash
   ingress:
     additional_labels: {}
     class_name: "nginx"
-    #enabled:
+    enabled: false
     override_yaml:
       metadata: {}
   instance_name: "kiali"
