--- a/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-local-operator.yaml
@@ -455,6 +455,8 @@ mojaloop-kafka:
       generate_secret_vault_base_path:
       generate_secret_extra_namespaces: []
     kafka_data:
+      use_in_memory_storage: false
+      in_memory_storage_size_limit: 2Gi
       storage_size: 8Gi
       storage_class_name: longhorn
       service_port: 9092
