first draft add policy for ambient mode on all ns

--- a/gitops/applications/base/kyverno/kustomization.yaml
+++ b/gitops/applications/base/kyverno/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespaces.yaml
   - image-rewrite-policy.yaml
   - argocd-restart-policy.yaml
+  - add-ambient-mode.yaml
 
 helmCharts:
   - name: kyverno
