--- a/gitops/applications/base/istio/istio-base-values.yaml
+++ b/gitops/applications/base/istio/istio-base-values.yaml
@@ -16,6 +16,7 @@ global:
 
 base:
   # Used for helm2 to add the CRDs to templates.
+  enableCRDTemplates: true
 
   # Validation webhook configuration url
   # For example: https://$remotePilotAddress:15017/validate
