--- a/gitops/applications/base/istio/istio-istiod-values.yaml
+++ b/gitops/applications/base/istio/istio-istiod-values.yaml
@@ -1,7 +1,12 @@
+# Enable ambient profile
+profile: ambient
+
 #.Values.pilot for discovery and mesh wide config
 
 ## Discovery Settings
 pilot:
+  cni:
+    enabled: true
   autoscaleEnabled: true
   autoscaleMin: 1
   autoscaleMax: 5
