add opt out and exclude certain ns

--- a/gitops/applications/base/kyverno/add-ambient-mode.yaml
+++ b/gitops/applications/base/kyverno/add-ambient-mode.yaml
@@ -10,6 +10,20 @@ spec:
           - resources:
               kinds:
                 - Namespace
+      exclude:
+        any:
+          # Hardcoded namespace exclusions
+          - resources:
+              namespaces:
+                - "kube-system"
+                - "kube-public"
+                - "istio-system"
+
+          # Exclude namespaces with specific labels (OR condition)
+          - resources:
+              selector:
+                matchLabels:
+                  opt-out-mesh: "true" # Example 2 (optional)
       mutate:
         patchStrategicMerge:
           metadata:
