--- a/gitops/argo-apps/base/monitoring-pre.yaml
+++ b/gitops/argo-apps/base/monitoring-pre.yaml
@@ -59,3 +59,6 @@ spec:
 
         - name: "cloud_region"
           value: "${ARGOCD_ENV_monitoring_monitoring_cloud_region}"
+
+        - name: "cluster_domain"
+          value: "${ARGOCD_ENV_monitoring_pre_cluster_domain}"
