fix: add skip-log-bin configuration to MySQL settings

--- a/gitops/applications/overlays/rdbms_provider/dbaas/deploy-env-onboard/percona-xtradb-cluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/dbaas/deploy-env-onboard/percona-xtradb-cluster.yaml
@@ -44,6 +44,7 @@ spec:
         coredumper=/tmp/mysql-core-dump
         innodb_buffer_pool_in_core_file=OFF
         mysql_native_password=ON
+        skip-log-bin
       tolerations: []
       priorityClassName: ""
 
