fix bucket name length

--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -8,7 +8,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "git.lfs.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "git.lfs.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -30,7 +30,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.artifacts.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.artifacts.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -52,7 +52,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.uploads.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.uploads.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -74,7 +74,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.packages.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.packages.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -96,7 +96,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "registry.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "registry.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -118,7 +118,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.mr.diffs.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.mr.diffs.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -140,7 +140,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.ci.secure.files.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.ci.secure.files.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -162,7 +162,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.terraform.state.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.terraform.state.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -184,7 +184,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.dependency.proxy.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.dependency.proxy.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -206,7 +206,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.runner.cache.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.runner.cache.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -228,7 +228,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.backups.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.backups.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
@@ -250,7 +250,7 @@ spec:
   parameters:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
-    bucketName: "gitlab.backups.tmp.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+    bucketName: "gitlab.backups.tmp.${ARGOCD_ENV_gitlab_dns_subdomain}"
     ccK8sProviderName: "kubernetes-provider"
     namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
