--- a/gitops/applications/base/gitlab/gitlab-values.yaml
+++ b/gitops/applications/base/gitlab/gitlab-values.yaml
@@ -374,28 +374,28 @@ global:
     lfs:
       enabled: true
       proxy_download: true
-      bucket: "git.lfs.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "git.lfs.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-lfs
         key: connection
     artifacts:
       enabled: true
       proxy_download: true
-      bucket: "gitlab.artifacts.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.artifacts.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-artifacts
         key: connection
     uploads:
       enabled: true
       proxy_download: true
-      bucket: "gitlab.uploads.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.uploads.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-uploads
         key: connection
     packages:
       enabled: true
       proxy_download: true
-      bucket: "gitlab.packages.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.packages.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-packages
         key: connection
@@ -403,33 +403,33 @@ global:
       enabled: true
       when:
       proxy_download: true
-      bucket: "gitlab.mr.diffs.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.mr.diffs.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-mr-diffs
         key: connection
     terraformState:
       enabled: true
-      bucket: "gitlab.terraform.state.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.terraform.state.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-terraform-state
         key: connection
     ciSecureFiles:
       enabled: true
-      bucket: "gitlab.ci.secure.files.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.ci.secure.files.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-ci-secure-files
         key: connection
     dependencyProxy:
       enabled: true
       proxy_download: true
-      bucket: "gitlab.dependency.proxy.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.dependency.proxy.${ARGOCD_ENV_gitlab_dns_subdomain}"
       connection:
         secret: gitlab-rails-secret-dependency-proxy
         key: connection
 
     backups:
-      bucket: "gitlab.backups.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
-      tmpBucket: "gitlab.backups.tmp.${ARGOCD_ENV_cluster_name}.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      bucket: "gitlab.backups.${ARGOCD_ENV_gitlab_dns_subdomain}"
+      tmpBucket: "gitlab.backups.tmp.${ARGOCD_ENV_gitlab_dns_subdomain}"
 
     ## https://docs.gitlab.com/charts/charts/globals#outgoing-email
     ## Microsoft Graph Mailer settings
