--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -335,11 +335,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: "git-lfs-${ARGOCD_ENV_cluster_name}"
+        key: "git.lfs.${ARGOCD_ENV_gitlab_dns_subdomain}"
         property: username
     - secretKey: password
       remoteRef:
-        key: "git-lfs-${ARGOCD_ENV_cluster_name}"
+        key: "git.lfs.${ARGOCD_ENV_gitlab_dns_subdomain}"
         property: password
 
   target:
@@ -376,11 +376,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-artifacts-${ARGOCD_ENV_cluster_name}
+        key: gitlab.artifacts.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-artifacts-${ARGOCD_ENV_cluster_name}
+        key: gitlab.artifacts.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -417,11 +417,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-uploads-${ARGOCD_ENV_cluster_name}
+        key: gitlab.uploads.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-uploads-${ARGOCD_ENV_cluster_name}
+        key: gitlab.uploads.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -458,11 +458,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-packages-${ARGOCD_ENV_cluster_name}
+        key: gitlab.packages.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-packages-${ARGOCD_ENV_cluster_name}
+        key: gitlab.packages.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -499,11 +499,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-mr-diffs-${ARGOCD_ENV_cluster_name}
+        key: gitlab.mr.diffs.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-mr-diffs-${ARGOCD_ENV_cluster_name}
+        key: gitlab.mr.diffs.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -540,11 +540,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-ci-secure-files-${ARGOCD_ENV_cluster_name}
+        key: gitlab.ci.secure.files.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-ci-secure-files-${ARGOCD_ENV_cluster_name}
+        key: gitlab.ci.secure.files.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -581,11 +581,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-terraform-state-${ARGOCD_ENV_cluster_name}
+        key: gitlab.terraform.state.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-terraform-state-${ARGOCD_ENV_cluster_name}
+        key: gitlab.terraform.state.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -622,11 +622,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-dependency-proxy-${ARGOCD_ENV_cluster_name}
+        key: gitlab.dependency.proxy.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-dependency-proxy-${ARGOCD_ENV_cluster_name}
+        key: gitlab.dependency.proxy.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -663,11 +663,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: registry-${ARGOCD_ENV_cluster_name}
+        key: registry.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: registry-${ARGOCD_ENV_cluster_name}
+        key: registry.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -677,7 +677,7 @@ spec:
       data:
         connection: |
           s3:
-           bucket: registry-${ARGOCD_ENV_cluster_name}
+           bucket: registry.${ARGOCD_ENV_gitlab_dns_subdomain}
            v4auth: true
            pathstyle: ${ARGOCD_ENV_object_storage_path_style}
            region: ${ARGOCD_ENV_cloud_region}
@@ -700,11 +700,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-backups-${ARGOCD_ENV_cluster_name}
+        key: gitlab.backups.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-backups-${ARGOCD_ENV_cluster_name}
+        key: gitlab.backups.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -741,11 +741,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-backups-tmp-${ARGOCD_ENV_cluster_name}
+        key: gitlab.backups.tmp.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-backups-tmp-${ARGOCD_ENV_cluster_name}
+        key: gitlab.backups.tmp.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
@@ -782,11 +782,11 @@ spec:
   data:
     - secretKey: username
       remoteRef:
-        key: gitlab-runner-cache-${ARGOCD_ENV_cluster_name}
+        key: gitlab.runner.cache.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: username
     - secretKey: password
       remoteRef:
-        key: gitlab-runner-cache-${ARGOCD_ENV_cluster_name}
+        key: gitlab.runner.cache.${ARGOCD_ENV_gitlab_dns_subdomain}
         property: password
 
   target:
