--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -79,7 +79,7 @@ ingester:
     limits:
       cpu: ${ARGOCD_ENV_mimir_ingester_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_ingester_limits_memory}
-  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir.${ARGOCD_ENV_cluster_domain}"
   persistence:
     size: ${ARGOCD_ENV_mimir_ingester_storage_size}
 
@@ -89,7 +89,7 @@ querier:
     limits:
       cpu: ${ARGOCD_ENV_mimir_querier_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_querier_limits_memory}
-  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir.${ARGOCD_ENV_cluster_domain}"
 
 queryFrontend:
   replicaCount: ${ARGOCD_ENV_mimir_query_frontend_replica_count}
@@ -100,7 +100,7 @@ queryFrontend:
 
 compactor:
   replicaCount: ${ARGOCD_ENV_mimir_compactor_replica_count}
-  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir.${ARGOCD_ENV_cluster_domain}"
   resources:
     limits:
       cpu: ${ARGOCD_ENV_mimir_compactor_limits_cpu}
@@ -114,7 +114,7 @@ storeGateway:
     limits:
       cpu: ${ARGOCD_ENV_mimir_store_gateway_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_store_gateway_limits_memory}
-  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir.${ARGOCD_ENV_cluster_domain}"
   persistence:
     size: ${ARGOCD_ENV_mimir_store_gateway_storage_size}
 
@@ -125,7 +125,7 @@ ruler:
     limits:
       cpu: ${ARGOCD_ENV_mimir_ruler_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_ruler_limits_memory}
-  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir.${ARGOCD_ENV_cluster_domain}"
 
 alertmanager:
   enabled: true
@@ -134,6 +134,6 @@ alertmanager:
     limits:
       cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}
-  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir.${ARGOCD_ENV_cluster_domain}"
   persistence:
     size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
