--- a/gitops/applications/base/vault/namespaces.yaml
+++ b/gitops/applications/base/vault/namespaces.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ${ARGOCD_ENV_vault_namespace}
+  labels:
+    opt-out-mesh: "true"
 ---
 apiVersion: v1
 kind: Namespace
