--- a/gitops/argo-apps/base/gitlab.yaml
+++ b/gitops/argo-apps/base/gitlab.yaml
@@ -25,115 +25,118 @@ spec:
       - CreateNamespace=true
       - PrunePropagationPolicy=foreground
       - PruneLast=true
+    managedNamespaceMetadata:
+      labels:
+        opt-out-mesh: "true"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: ${ARGOCD_ENV_gitlab_app_namespace}
 
   sources:
-  - repoURL: ${ARGOCD_ENV_argocd_repo_url}
-    targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
-    path: gitops/applications/base/gitlab
-    plugin:
-      name: envsubst
-      env:
-        - name: "cluster_name"
-          value: "${ARGOCD_ENV_cluster_name}"
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
+      path: gitops/applications/base/gitlab
+      plugin:
+        name: envsubst
+        env:
+          - name: "cluster_name"
+            value: "${ARGOCD_ENV_cluster_name}"
 
-        - name: "cloud_region"
-          value: "${ARGOCD_ENV_gitlab_pre_object_storage_region}"
+          - name: "cloud_region"
+            value: "${ARGOCD_ENV_gitlab_pre_object_storage_region}"
 
-        - name: "gitlab_namespace"
-          value: "${ARGOCD_ENV_gitlab_gitlab_namespace}"
+          - name: "gitlab_namespace"
+            value: "${ARGOCD_ENV_gitlab_gitlab_namespace}"
 
-        - name: "gitlab_app_name"
-          value: "${ARGOCD_ENV_gitlab_gitlab_app_name}"
+          - name: "gitlab_app_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_app_name}"
 
-        - name: "gitlab_helm_version"
-          value: "${ARGOCD_ENV_gitlab_gitlab_helm_version}"
+          - name: "gitlab_helm_version"
+            value: "${ARGOCD_ENV_gitlab_gitlab_helm_version}"
 
-        - name: "gitlab_istio_gateway_namespace"
-          value: "${ARGOCD_ENV_gitlab_gitlab_istio_gateway_namespace}"
+          - name: "gitlab_istio_gateway_namespace"
+            value: "${ARGOCD_ENV_gitlab_gitlab_istio_gateway_namespace}"
 
-        - name: "gitlab_istio_wildcard_gateway_name"
-          value: "${ARGOCD_ENV_gitlab_gitlab_istio_wildcard_gateway_name}"
+          - name: "gitlab_istio_wildcard_gateway_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_istio_wildcard_gateway_name}"
 
-        - name: "gitlab_dns_subdomain"
-          value: "${ARGOCD_ENV_gitlab_gitlab_dns_subdomain}"
+          - name: "gitlab_dns_subdomain"
+            value: "${ARGOCD_ENV_gitlab_gitlab_dns_subdomain}"
 
-        - name: "gitlab_registry_dns_subdomain"
-          value: "${ARGOCD_ENV_gitlab_registry_dns_subdomain}"
+          - name: "gitlab_registry_dns_subdomain"
+            value: "${ARGOCD_ENV_gitlab_registry_dns_subdomain}"
 
-        - name: "gitlab_registry_istio_gateway_namespace"
-          value: "${ARGOCD_ENV_gitlab_registry_istio_gateway_namespace}"
+          - name: "gitlab_registry_istio_gateway_namespace"
+            value: "${ARGOCD_ENV_gitlab_registry_istio_gateway_namespace}"
 
-        - name: "gitlab_registry_istio_wildcard_gateway_name"
-          value: "${ARGOCD_ENV_gitlab_registry_istio_wildcard_gateway_name}"
+          - name: "gitlab_registry_istio_wildcard_gateway_name"
+            value: "${ARGOCD_ENV_gitlab_registry_istio_wildcard_gateway_name}"
 
-        - name: "gitlab_root_token_secret_name"
-          value: "${ARGOCD_ENV_gitlab_gitlab_root_token_secret_name}"
+          - name: "gitlab_root_token_secret_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_root_token_secret_name}"
 
-        - name: "gitlab_root_token_secret_key"
-          value: "${ARGOCD_ENV_gitlab_gitlab_root_token_secret_key}"
+          - name: "gitlab_root_token_secret_key"
+            value: "${ARGOCD_ENV_gitlab_gitlab_root_token_secret_key}"
 
-        - name: "gitlab_oidc_secret"
-          value: "${ARGOCD_ENV_gitlab_gitlab_oidc_secret}"
+          - name: "gitlab_oidc_secret"
+            value: "${ARGOCD_ENV_gitlab_gitlab_oidc_secret}"
 
-        - name: "zitadel_dns_subdomain"
-          value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
+          - name: "zitadel_dns_subdomain"
+            value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
 
-        - name: "gitlab_gitaly_storage_size"
-          value: "${ARGOCD_ENV_gitlab_gitlab_gitaly_storage_size}"
+          - name: "gitlab_gitaly_storage_size"
+            value: "${ARGOCD_ENV_gitlab_gitlab_gitaly_storage_size}"
 
-        - name: "praefect_externalservice_name"
-          value: "${ARGOCD_ENV_gitlab_gitlab_praefect_externalservice_name}"
+          - name: "praefect_externalservice_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_praefect_externalservice_name}"
 
-        - name: "gitlab_externalservice_name"
-          value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_externalservice_name}"
+          - name: "gitlab_externalservice_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_externalservice_name}"
 
-        - name: "gitlab_db_name"
-          value: "${ARGOCD_ENV_gitlab_pre_gitlab_db_name}"
+          - name: "gitlab_db_name"
+            value: "${ARGOCD_ENV_gitlab_pre_gitlab_db_name}"
 
-        - name: "praefect_db_name"
-          value: "${ARGOCD_ENV_gitlab_pre_praefect_db_name}"
+          - name: "praefect_db_name"
+            value: "${ARGOCD_ENV_gitlab_pre_praefect_db_name}"
 
-        - name: "gitlab_db_username"
-          value: "${ARGOCD_ENV_gitlab_pre_gitlab_db_username}"
+          - name: "gitlab_db_username"
+            value: "${ARGOCD_ENV_gitlab_pre_gitlab_db_username}"
 
-        - name: "praefect_db_username"
-          value: "${ARGOCD_ENV_gitlab_pre_praefect_db_username}"
+          - name: "praefect_db_username"
+            value: "${ARGOCD_ENV_gitlab_pre_praefect_db_username}"
 
-        - name: "gitlab_dbdeploy_name_prefix"
-          value: "${ARGOCD_ENV_gitlab_pre_gitlab_dbdeploy_name_prefix}"
+          - name: "gitlab_dbdeploy_name_prefix"
+            value: "${ARGOCD_ENV_gitlab_pre_gitlab_dbdeploy_name_prefix}"
 
-        - name: "praefect_dbdeploy_name_prefix"
-          value: "${ARGOCD_ENV_gitlab_pre_praefect_dbdeploy_name_prefix}"
+          - name: "praefect_dbdeploy_name_prefix"
+            value: "${ARGOCD_ENV_gitlab_pre_praefect_dbdeploy_name_prefix}"
 
-        - name: "praefect_db_secret"
-          value: "${ARGOCD_ENV_gitlab_pre_praefect_db_secret}"
+          - name: "praefect_db_secret"
+            value: "${ARGOCD_ENV_gitlab_pre_praefect_db_secret}"
 
-        - name: "gitlab_db_secret"
-          value: "${ARGOCD_ENV_gitlab_pre_gitlab_db_secret}"
+          - name: "gitlab_db_secret"
+            value: "${ARGOCD_ENV_gitlab_pre_gitlab_db_secret}"
 
-        - name: "gitlab_token_ttl"
-          value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_token_ttl}"
+          - name: "gitlab_token_ttl"
+            value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_token_ttl}"
 
-        - name: "storage_namespace"
-          value: "${ARGOCD_ENV_utils_storage_namespace}"
+          - name: "storage_namespace"
+            value: "${ARGOCD_ENV_utils_storage_namespace}"
 
-        - name: "object_storage_endpoint"
-          value: "${ARGOCD_ENV_utils_storage_object_storage_endpoint}"
+          - name: "object_storage_endpoint"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_endpoint}"
 
-        - name: "object_storage_regional_endpoint"
-          value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
+          - name: "object_storage_regional_endpoint"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
 
-        - name: "object_storage_host"
-          value: "${ARGOCD_ENV_utils_storage_object_storage_host}"
+          - name: "object_storage_host"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_host}"
 
-        - name: "object_storage_regional_host"
-          value: "${ARGOCD_ENV_utils_storage_object_storage_regional_host}"
+          - name: "object_storage_regional_host"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_regional_host}"
 
-        - name: "object_storage_path_style"
-          value: "${ARGOCD_ENV_utils_storage_object_storage_path_style}"
+          - name: "object_storage_path_style"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_path_style}"
 
-        - name: "object_store_insecure_connection"
-          value: "${ARGOCD_ENV_utils_storage_object_store_insecure_connection}"
+          - name: "object_store_insecure_connection"
+            value: "${ARGOCD_ENV_utils_storage_object_store_insecure_connection}"
