--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -25,6 +25,9 @@ spec:
       - CreateNamespace=true
       - PrunePropagationPolicy=foreground
       - PruneLast=true
+    managedNamespaceMetadata:
+      labels:
+        opt-out-mesh: "true"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: ${ARGOCD_ENV_gitlab_gitlab_namespace}
@@ -425,7 +428,6 @@ spec:
 
           - name: "pgbouncer_expose_type"
             value: "ClusterIP"
-
 
     #praefect db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
